snapshots/DeepSpeech/native_client/kenlm/lm/common/test__joint_order.hh.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 71,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "lm",
            ),
            start_line: 14,
            end_line: 69,
            kind: Namespace,
            spaces: [
                FuncSpace {
                    name: Some(
                        "JointOrder",
                    ),
                    start_line: 16,
                    end_line: 67,
                    kind: Function,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 2,
                            closure_nargs: 0,
                            fn_nargs_sum: 2,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 2,
                            closure_nargs_min: 0,
                            fn_nargs_max: 2,
                            closure_nargs_max: 0,
                            total_functions: 1,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 1,
                            exit_sum: 1,
                            total_space_functions: 1,
                            exit_min: 1,
                            exit_max: 1,
                        },
                        cognitive: Stats {
                            structural: 18,
                            structural_sum: 18,
                            structural_min: 18,
                            structural_max: 18,
                            nesting: 2,
                            total_space_functions: 1,
                            boolean_seq: BoolSequence {
                                boolean_op: Some(
                                    348,
                                ),
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 11.000,
                            cyclomatic: 11.000,
                            n: 1,
                            cyclomatic_max: 11.000,
                            cyclomatic_min: 11.000,
                        },
                        halstead: Stats {
                            u_operators: 29,
                            operators: 184,
                            u_operands: 41,
                            operands: 126,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 15,
                                end: 66,
                                unit: fal,
                                sloc_min: 52,
                                sloc_max: 52,
                            },
                            ploc: Ploc {
                                lines: {
                                    64,
                                    58,
                                    55,
                                    49,
                                    43,
                                    40,
                                    37,
                                    34,
                                    31,
                                    25,
                                    22,
                                    19,
                                    65,
                                    62,
                                    56,
                                    53,
                                    50,
                                    47,
                                    44,
                                    32,
                                    26,
                                    23,
                                    20,
                                    17,
                                    66,
                                    63,
                                    60,
                                    54,
                                    51,
                                    48,
                                    42,
                                    39,
                                    36,
                                    33,
                                    30,
                                    27,
                                    21,
                                    15,
                                },
                                ploc_min: 38,
                                ploc_max: 38,
                            },
                            cloc: Cloc {
                                only_comment_lines: 8,
                                code_comment_lines: 3,
                                comment_line_end: Some(
                                    52,
                                ),
                                cloc_min: 11,
                                cloc_max: 11,
                            },
                            lloc: Lloc {
                                logical_lines: 30,
                                lloc_min: 30,
                                lloc_max: 30,
                            },
                            space_count: 1,
                            blank_min: 6,
                            blank_max: 6,
                        },
                        nom: Stats {
                            functions: 1,
                            closures: 0,
                            functions_sum: 1,
                            closures_sum: 0,
                            functions_min: 1,
                            functions_max: 1,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 310.000,
                            halstead_vocabulary: 70.000,
                            halstead_volume: 1900.078,
                            cyclomatic: 11.000,
                            sloc: 52.000,
                            comments_percentage: 0.212,
                        },
                        abc: Stats {
                            assignments: 0.000,
                            assignments_sum: 0.000,
                            assignments_min: 0.000,
                            assignments_max: 0.000,
                            branches: 0.000,
                            branches_sum: 0.000,
                            branches_min: 0.000,
                            branches_max: 0.000,
                            conditions: 0.000,
                            conditions_sum: 0.000,
                            conditions_min: 0.000,
                            conditions_max: 0.000,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.000,
                            class_wmc: 0.000,
                            interface_wmc: 0.000,
                            class_wmc_sum: 0.000,
                            interface_wmc_sum: 0.000,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: fal,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: fal,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 2,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 2,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 1,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 1,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 18,
                    structural_min: 0,
                    structural_max: 18,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 12.000,
                    cyclomatic: 1.000,
                    n: 2,
                    cyclomatic_max: 11.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 29,
                    operators: 188,
                    u_operands: 42,
                    operands: 129,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 13,
                        end: 68,
                        unit: fal,
                        sloc_min: 52,
                        sloc_max: 52,
                    },
                    ploc: Ploc {
                        lines: {
                            64,
                            58,
                            55,
                            49,
                            43,
                            40,
                            37,
                            34,
                            31,
                            25,
                            22,
                            19,
                            13,
                            68,
                            65,
                            62,
                            56,
                            53,
                            50,
                            47,
                            44,
                            32,
                            26,
                            23,
                            20,
                            17,
                            66,
                            63,
                            60,
                            54,
                            51,
                            48,
                            42,
                            39,
                            36,
                            33,
                            30,
                            27,
                            21,
                            15,
                        },
                        ploc_min: 38,
                        ploc_max: 38,
                    },
                    cloc: Cloc {
                        only_comment_lines: 8,
                        code_comment_lines: 3,
                        comment_line_end: None,
                        cloc_min: 11,
                        cloc_max: 11,
                    },
                    lloc: Lloc {
                        logical_lines: 30,
                        lloc_min: 30,
                        lloc_max: 30,
                    },
                    space_count: 2,
                    blank_min: 6,
                    blank_max: 6,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 317.000,
                    halstead_vocabulary: 71.000,
                    halstead_volume: 1949.470,
                    cyclomatic: 12.000,
                    sloc: 56.000,
                    comments_percentage: 0.196,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 2,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 2,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 1,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 1,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 18,
            structural_min: 0,
            structural_max: 18,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 13.000,
            cyclomatic: 1.000,
            n: 3,
            cyclomatic_max: 11.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 29,
            operators: 188,
            u_operands: 46,
            operands: 135,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 71,
                unit: tru,
                sloc_min: 56,
                sloc_max: 56,
            },
            ploc: Ploc {
                lines: {
                    0,
                    64,
                    58,
                    55,
                    70,
                    49,
                    43,
                    40,
                    37,
                    34,
                    31,
                    25,
                    22,
                    19,
                    13,
                    7,
                    4,
                    1,
                    68,
                    65,
                    62,
                    56,
                    53,
                    50,
                    47,
                    44,
                    32,
                    26,
                    23,
                    20,
                    17,
                    11,
                    8,
                    66,
                    63,
                    60,
                    54,
                    51,
                    48,
                    42,
                    39,
                    36,
                    33,
                    30,
                    27,
                    21,
                    15,
                    9,
                    6,
                    3,
                },
                ploc_min: 40,
                ploc_max: 40,
            },
            cloc: Cloc {
                only_comment_lines: 8,
                code_comment_lines: 5,
                comment_line_end: None,
                cloc_min: 11,
                cloc_max: 11,
            },
            lloc: Lloc {
                logical_lines: 30,
                lloc_min: 30,
                lloc_max: 30,
            },
            space_count: 3,
            blank_min: 8,
            blank_max: 8,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 323.000,
            halstead_vocabulary: 75.000,
            halstead_volume: 2011.908,
            cyclomatic: 13.000,
            sloc: 71.000,
            comments_percentage: 0.183,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
