snapshots/DeepSpeech/native_client/kenlm/lm/common/test__renumber.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 17,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "lm",
            ),
            start_line: 6,
            end_line: 17,
            kind: Namespace,
            spaces: [
                FuncSpace {
                    name: None,
                    start_line: 8,
                    end_line: 15,
                    kind: Function,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 1,
                            closure_nargs: 0,
                            fn_nargs_sum: 1,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 1,
                            closure_nargs_min: 0,
                            fn_nargs_max: 1,
                            closure_nargs_max: 0,
                            total_functions: 1,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 0,
                            exit_sum: 0,
                            total_space_functions: 1,
                            exit_min: 0,
                            exit_max: 0,
                        },
                        cognitive: Stats {
                            structural: 3,
                            structural_sum: 3,
                            structural_min: 3,
                            structural_max: 3,
                            nesting: 1,
                            total_space_functions: 1,
                            boolean_seq: BoolSequence {
                                boolean_op: None,
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 3.000,
                            cyclomatic: 3.000,
                            n: 1,
                            cyclomatic_max: 3.000,
                            cyclomatic_min: 3.000,
                        },
                        halstead: Stats {
                            u_operators: 14,
                            operators: 39,
                            u_operands: 14,
                            operands: 24,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 7,
                                end: 14,
                                unit: fal,
                                sloc_min: 8,
                                sloc_max: 8,
                            },
                            ploc: Ploc {
                                lines: {
                                    13,
                                    10,
                                    7,
                                    14,
                                    11,
                                    8,
                                    12,
                                    9,
                                },
                                ploc_min: 8,
                                ploc_max: 8,
                            },
                            cloc: Cloc {
                                only_comment_lines: 0,
                                code_comment_lines: 0,
                                comment_line_end: None,
                                cloc_min: 0,
                                cloc_max: 0,
                            },
                            lloc: Lloc {
                                logical_lines: 4,
                                lloc_min: 4,
                                lloc_max: 4,
                            },
                            space_count: 1,
                            blank_min: 0,
                            blank_max: 0,
                        },
                        nom: Stats {
                            functions: 1,
                            closures: 0,
                            functions_sum: 1,
                            closures_sum: 0,
                            functions_min: 1,
                            functions_max: 1,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 63.000,
                            halstead_vocabulary: 28.000,
                            halstead_volume: 302.863,
                            cyclomatic: 3.000,
                            sloc: 8.000,
                            comments_percentage: 0.000,
                        },
                        abc: Stats {
                            assignments: 0.000,
                            assignments_sum: 0.000,
                            assignments_min: 0.000,
                            assignments_max: 0.000,
                            branches: 0.000,
                            branches_sum: 0.000,
                            branches_min: 0.000,
                            branches_max: 0.000,
                            conditions: 0.000,
                            conditions_sum: 0.000,
                            conditions_min: 0.000,
                            conditions_max: 0.000,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.000,
                            class_wmc: 0.000,
                            interface_wmc: 0.000,
                            class_wmc_sum: 0.000,
                            interface_wmc_sum: 0.000,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: fal,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: fal,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 1,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 1,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 3,
                    structural_min: 0,
                    structural_max: 3,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 4.000,
                    cyclomatic: 1.000,
                    n: 2,
                    cyclomatic_max: 3.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 14,
                    operators: 40,
                    u_operands: 15,
                    operands: 25,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 5,
                        end: 16,
                        unit: fal,
                        sloc_min: 8,
                        sloc_max: 8,
                    },
                    ploc: Ploc {
                        lines: {
                            16,
                            13,
                            10,
                            7,
                            14,
                            11,
                            8,
                            5,
                            12,
                            9,
                        },
                        ploc_min: 8,
                        ploc_max: 8,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 4,
                        lloc_min: 4,
                        lloc_max: 4,
                    },
                    space_count: 2,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 65.000,
                    halstead_vocabulary: 29.000,
                    halstead_volume: 315.769,
                    cyclomatic: 4.000,
                    sloc: 12.000,
                    comments_percentage: 0.000,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 1,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 1,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 3,
            structural_min: 0,
            structural_max: 3,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 5.000,
            cyclomatic: 1.000,
            n: 3,
            cyclomatic_max: 3.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 14,
            operators: 40,
            u_operands: 18,
            operands: 28,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 17,
                unit: tru,
                sloc_min: 12,
                sloc_max: 12,
            },
            ploc: Ploc {
                lines: {
                    0,
                    16,
                    13,
                    10,
                    7,
                    1,
                    14,
                    11,
                    8,
                    5,
                    12,
                    9,
                    3,
                },
                ploc_min: 10,
                ploc_max: 10,
            },
            cloc: Cloc {
                only_comment_lines: 0,
                code_comment_lines: 1,
                comment_line_end: None,
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 4,
                lloc_min: 4,
                lloc_max: 4,
            },
            space_count: 3,
            blank_min: 2,
            blank_max: 2,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 68.000,
            halstead_vocabulary: 32.000,
            halstead_volume: 340.000,
            cyclomatic: 5.000,
            sloc: 17.000,
            comments_percentage: 0.059,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
